add extra_image support sd
